# poetry-project

./: .gitignore  kernel-metadata.json  pyproject.toml
notebooks/: house.ipynb  house_price_3_models.ipynb  parts-1.ipynb  titanic.ipynb
src/: i.py  webcam.py
submissions/: submission.csv  submission_random_forest.csv  submission_xg_boost.csv
