[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Developer Imran <aiengrimran@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# python = "3.12"
python = ">=3.11,<3.13"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
numpy = "^2.1"
matplotlib = "^3.10.1"
lightgbm = "^4.6.0"
xgboost = "^3.0.1"
seaborn = "^0.13.2"
category-encoders = "^2.8.1"
opencv-python = "^4.11.0.86"
#tensorflow = "2.19.0"


[tool.poetry.group.dev.dependencies]
kaggle = "^1.7.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
